# lyrion-android-beta

./: .gitignore  AAB_NUEVO_GENERADO.md  AAB_READY_FOR_PLAYSTORE.md  CNAME  CRASH_FIXES_COMPLETADO.md  CREDENCIALES_IMPORTANTES.txt  ChatScreenViewModel_ORIGINAL.kt  FINAL_AAB_VERIFICATION.md  GOOGLE_PLAY_COMPLIANCE.md  GOOGLE_PLAY_UPLOAD_INFO.md  IA_LIVE_COMPLETADO.md  IA_LIVE_SOLUCION_DEFINITIVA.md  IMPLEMENTACION_CHAT_STATUS.md  INSTRUCCIONES_AGP.md  INSTRUCCIONES_PALOMAS_REALTIME.md  INSTRUCCIONES_VERIFICAR_REALTIME.md  INTEGRACION_VOZ_TEXTO_COMPLETADA.md  PRIVACY_POLICY_HOSTING.md  PROYECTO_COMPLETADO_EXITOSAMENTE.md  README.md  RELEASE_README.md  SOLUCION_16KB_RESUMEN.md  SOLUCION_GOOGLE_PLAY.md  SOLUCION_TESTONLY_DEFINITIVA.md  STT_FIXES_SUMMARY.md  TESTING_ACTIVATION_PLAN.md  TTS_OPTIMIZATION_SUMMARY.md  URGENT_GOOGLE_PLAY_FIX.md  VERIFICATION_CHECKLIST.md  analyze_aab.ps1  basededatos.txt  build.gradle.kts  build_error.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_duplicates.txt  build_log_new.txt  (+26 more)
.github/workflows/: pages.yml
app/: build.gradle.kts  build.gradle.kts.failed  proguard-rules.pro
app/objectbox-models/: default.json  default.json.bak
app/src/main/: AndroidManifest.xml
docs/: index.html
gradle/: libs.versions.toml
keystore-main/: NUEVA_CLAVE_FIRMA_INSTRUCCIONES.txt  README.md
lyrion-ios-beta-2.5-main/: README.md  REELS_COMPLETADO.md  REELS_IMPLEMENTATION.md  SOLUCIONES_PROBADAS_NO_FUNCIONAN.md  SUPABASE_STORAGE_SETUP.md  add_banner_column.sql  add_occupation_column.sql  add_reels_support.sql  advanced_comments.sql  build_log.txt  cleanup_expired_stories.sql  cleanup_old_media.sql  create_storage_buckets.sql  create_storage_buckets_secure.sql  create_storage_buckets_stories.sql  create_stories_table.sql  ejecutar_en_supabase.sql  enable_friend_requests.sql  fix_permissions.sql  fix_permissions_final.sql  fix_permissions_v2.sql  fix_post_reactions.sql  fix_profile_rls.sql  fix_reaction_upsert.sql  fix_stats_data.sql  setup_accept_request.sql  setup_interaction_tables.sql  setup_posts_comments.sql  setup_storage_policies.sql  setup_unfriend_logic.sql  setup_user_presence.sql  split_entities_and_groups.sql  update_content_policies.sql  update_friends_schema.sql  update_messages_schema.sql  update_network_schema.sql  update_reels_schema.sql  update_stories_visibility.sql  update_threading_schema.sql  update_threading_schema_v2.sql
lyrion-ios-beta-2.5-main/arduino/: BLUETOOTH_SETUP.txt  CONEXIONES_TB6612.txt  GUIA_CONFIGURACION_BLUETOOTH.txt  configurar_bluetooth.ino  robot_soccer_bluetooth.ino  robot_soccer_mejorado.ino  terminal_at_bluetooth.ino  test_motores_diagnostico.ino  test_simple_visual.ino  xdd
lyrion-ios-beta-2.5-main/lyrion/: AuthManager.swift  CacheManager.swift  CalendarManager.swift  ColorExtensions.swift  ContentView.swift  GoogleCalendarService.swift  LanguageManager.swift  LyrionIAApp.swift  LyrionTheme.swift  SupabaseClient.swift
lyrion-ios-beta-2.5-main/lyrion.xcodeproj/: project.pbxproj
lyrion-ios-beta-2.5-main/lyrion/Models/: Data.swift  (+8 more)
orabel/: build.gradle.kts
orabel/src/main/cpp/: CMakeLists.txt  llm_inference.cpp  llm_inference.h  orabel.cpp
(+283 files in other folders)
